--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Background low-volume loop sound -->
   <audio id="bgSound" loop>
-    <source src="https://assets.mixkit.co/sfx/preview/mixkit-soft-ambient-1110.mp3" type="audio/mpeg">
+    <source src="accg.mp3" type="audio/mpeg">
   </audio>
 
   <!-- Alert tone when 5 seconds left -->
